# MaximumDefectiveClique

./: ..gitignore.un~  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  gprof.out  test.ou  test.out
datas/: ia-enron-large  tech-WHOIS
doc/: exp.xlsx  exp1.xlsx  exp1_madec.xlsx  exp3.xlsx  prework.csv
src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  run.vcxproj  run.vcxproj.filters
src/biplex/: biplex.cpp  biplex.h
src/defclique/: CMakeLists.txt  DefClique.vcxproj  DefClique.vcxproj.filters  Makefile  cmake_install.cmake  defclique.cpp  defclique.h
src/kdbb/: CMakeLists.txt  kdbb.cpp  kdbb.h
src/kdbb/pmc/: CMakeLists.txt  pmc  pmc_driver.cpp  pmc_graph.cpp  pmc_graph.h  pmc_headers.h  pmc_maxclique.h  pmc_utils.cpp  pmc_utils.h  pmcx_maxclique.cpp  pmcx_maxclique.h  pmcx_maxclique_basic.h
src/utils/: CMakeLists.txt  Makefile  bigraph.hpp  cmake_install.cmake  cmdline.hpp  coloring.hpp  fastio.hpp  graph.hpp  hash.hpp  linearheap.hpp  log.hpp  ordering.hpp  vertexset.hpp
